# marketing-analytics-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  compose.yaml  fly-prod.toml  fly-staging.toml  fly.toml
.github/workflows/: fly-deploy-staging.yml  fly-deploy.yaml
mixpanel-rs/: .gitignore  Cargo.toml
mixpanel-rs/examples/: basic_example.rs
mixpanel-rs/src/: client.rs  errors.rs  groups.rs  lib.rs  people.rs  profile_helpers.rs  types.rs  utils.rs
offchain-server/: Cargo.toml
offchain-server/src/: app_config.rs  config.rs  consts.rs  ip_config.rs  looker.rs  main.rs  utils.rs
offchain-server/src/adapters/: app_state.rs  auth_middleware.rs  http.rs  loc_from_ip.rs  location_from_ip.rs  mod.rs  parse_ip.rs  sentry_webhook.rs
offchain-server/src/application/services/: mixpanel_analytics_service.rs  mod.rs  sentry_service.rs
offchain-server/src/domain/: errors.rs
offchain-server/src/domain/ports/: analytics.rs
offchain-server/src/infrastructure/repository/: mixpanel_repository.rs  mod.rs
