[workspace]
members = ["mixpanel-rs", "offchain-server"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
yral-canisters-client = { git = "https://github.com/dolr-ai/yral-common.git", branch = "master", features = [
    "individual-user",
    "user-post-service",
    "user-info-service"
] }