[package]
name = "mixpanel_rs"
version = "0.1.0"
edition = "2021"
description = "Rust client for Mixpanel API"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = {version = "0.1", optional = true}
tracing-subscriber = { version = "0.3", optional = true, features = ["fmt"] }
thiserror = "2.0.12"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"
