[package]
name = "offchain-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "marketing-analytics-server"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
anyhow = "1.0.97"
thiserror = "2.0.12"
axum = "0.8.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
mixpanel_rs = { path = "../mixpanel-rs", features = ["tracing"] }
ic-agent = { version = "0.38.2", features = ["wasm-bindgen"]}
candid = "0.10.3"
reqwest.workspace = true