[package]
name = "offchain-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "marketing-analytics-server"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
anyhow = "1.0.97"
thiserror = "2.0.12"
axum = "0.8.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
mixpanel_rs = { path = "../mixpanel-rs", features = ["tracing"] }
ic-agent = { version = "0.38.2", features = ["wasm-bindgen"]}
candid = "0.10.3"
reqwest.workspace = true
google-cloud-bigquery = { version = "0.13.1", default-features = false, features = [
    "auth",
    "rustls-tls",
] }
config = { version = "0.14.0", features = ["toml"] }
serde_with = "3.7.0"
base64 = "0.13"
chrono = { version = "=0.4.38", features = ["serde"] }
woothee = "0.13.0"